feat: optimize repository, add iframe registration and video hero

--- a/index.html
+++ b/index.html
@@ -1,26 +1,53 @@
 <!doctype html>
 <html lang="de">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" href="/image.png" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0, user-scalable=yes" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title>ASKÖ Volley Juniors Salzburg - Volleyball für Kids & Teens</title>
-    <meta name="description" content="ASKÖ Volley Juniors Salzburg bietet Volleyball-Training für Kinder und Jugendliche von 6-17 Jahren. Spaß, Teamgeist und professionelle Betreuung!" />
-    <meta name="keywords" content="Volleyball, Salzburg, Kinder, Jugend, Sport, Training, ASKÖ" />
-    <meta name="author" content="ASKÖ Volley Juniors Salzburg" />
-    <meta property="og:title" content="ASKÖ Volley Juniors Salzburg - Volleyball für Kids & Teens" />
-    <meta property="og:description" content="Volleyball-Training für Kinder und Jugendliche in Salzburg" />
-    <meta property="og:type" content="website" />
-    <meta property="og:image" content="/image.png" />
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="ASKÖ Volley Juniors Salzburg" />
-    <meta name="twitter:description" content="Volleyball für Kids & Teens in Salzburg" />
-    <meta name="twitter:image" content="/image.png" />
-    <meta name="theme-color" content="#C41E3A" />
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/png" href="/image.png" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0, user-scalable=yes" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta http-equiv="Content-Security-Policy"
+    content="default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval'; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com; connect-src 'self' ws: wss: http://localhost:* https://*.supabase.co; img-src 'self' data: https:; frame-src 'self' https://formular.vereinsplaner.com; frame-ancestors 'none'; base-uri 'self'; form-action 'self';" />
+  <meta http-equiv="X-Content-Type-Options" content="nosniff" />
+  <meta name="referrer" content="strict-origin-when-cross-origin" />
+  <title>ASKÖ Volley Juniors Salzburg - Volleyball für Kids & Teens</title>
+  <meta name="description"
+    content="ASKÖ Volley Juniors Salzburg bietet Volleyball-Training für Kinder und Jugendliche von 6-17 Jahren in Salzburg. Spaß, Teamgeist und professionelle Betreuung!" />
+  <meta name="keywords" content="Volleyball, Salzburg, Kinder, Jugend, Sport, Verein, Training, ASKÖ, Volley Juniors" />
+  <meta name="author" content="ASKÖ Volley Juniors Salzburg" />
+  <link rel="canonical" href="https://noticemycat.github.io/volley_juniors_salzburg/" />
+  <meta property="og:title" content="ASKÖ Volley Juniors Salzburg - Volleyball für Kids & Teens" />
+  <meta property="og:description" content="Volleyball-Training für Kinder und Jugendliche in Salzburg" />
+  <meta property="og:type" content="website" />
+  <meta property="og:image" content="/image.png" />
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="ASKÖ Volley Juniors Salzburg" />
+  <meta name="twitter:description" content="Volleyball für Kids & Teens in Salzburg" />
+  <meta name="twitter:image" content="/image.png" />
+  <meta name="theme-color" content="#C41E3A" />
+  <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "SportsOrganization",
+        "name": "ASKÖ Volley Juniors Salzburg",
+        "url": "https://noticemycat.github.io/volley_juniors_salzburg/",
+        "logo": "https://noticemycat.github.io/volley_juniors_salzburg/image.png",
+        "description": "Volleyball-Training für Kinder und Jugendliche in Salzburg.",
+        "location": {
+          "@type": "Place",
+          "address": {
+            "@type": "PostalAddress",
+            "addressLocality": "Salzburg",
+            "addressCountry": "AT"
+          }
+        }
+      }
+    </script>
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.tsx"></script>
+</body>
+
 </html>
